# tool-dq-workbench

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.yml  docker-compose.yml  dq_monitor.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh  validationRuleMonitor.py
.github/workflows/: docker-publish.yml  docs.yml  windows-installer.yml
app/: cli.py  runner.py
app/analyzers/: integrity_analyzer.py  outlier_analyzer.py  rule_analyzer.py  stage_analyzer.py
app/core/: api_utils.py  config_loader.py  numeric_value_types.py  period_type.py  period_utils.py  time_unit.py  uid_utils.py
app/generators/: min_max_factory.py  min_max_results_tracker.py  min_max_statistics.py
app/minmax/: min_max_factory.py  min_max_method.py  min_max_record.py  min_max_results_tracker.py  min_max_statistics.py
app/web/: app.py
app/web/routes/: __init__.py  api.py  delete_minmax_stage.py  delete_stage.py  edit_integrity_stage.py  edit_min_max_stage.py  edit_outlier_stage.py  edit_server.py  edit_validation_rule_stage.py  index.py  index_minmax.py  minmax_analysis.py  run.py  (+8 more)
config/: config.yml  sample_config.yml
docs/: building_docs.rst  conf.py  configuration.rst  index.rst  installation.rst  integrity_stage.rst  min_max_generation.rst  outlier_stages.rst  validation_rule_stages.rst
docs/slides/: Makefile  conf.py  index.rst
installer/: dq_workbench.spec  dq_workbench_win.iss  main_win.py
lib/: ValidationMonitorConfigReader.py  periodUtils.py
scripts/: min_max_get_datavalues.py
tests/: test_api_utils.py  test_min_max_statistics.py  test_periodUtils.py  test_web_app_config.py  test_web_app_waitress.py  test_web_index.py
web/: app.py
web/templates/: index.html  stage_form_outlier.html  stage_form_validation_rule.html
web/utils/: config_helpers.py
(+71 files in other folders)
