# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-dq-workbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.1,<3.2",
  "flask-wtf>=1.2,<2.0",
  "aiohttp>=3.10,<4.0",
  "pandas>=2.0,<2.3",
  "python-dateutil>=2.9,<3.0",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
  # Runtime scientific stack
  "numpy>=1.26,<2.0",     # has wheels for py3.10–3.12+
  "scipy>=1.12,<1.16",    # avoids the nonexistent 1.16.1 pin
]

[project.optional-dependencies]
# Install with: pip install -e .[dev]
dev = [
  "pytest>=8.3,<9",
]

